argocd/hello/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
  namespace: default
spec:
  selector:
    app: hello-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
